mnt/airflow/logs/dag_id=etl_pipeline/run_id=manual__2025-03-26T133339.761724+0000/task_id=create_tables_task/attempt=5.log
[2025-04-03T22:07:31.192+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2025-04-03T22:07:31.247+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: etl_pipeline.create_tables_task manual__2025-03-26T13:33:39.761724+00:00 [queued]>
[2025-04-03T22:07:31.270+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: etl_pipeline.create_tables_task manual__2025-03-26T13:33:39.761724+00:00 [queued]>
[2025-04-03T22:07:31.278+0000] {taskinstance.py:2306} INFO - Starting attempt 5 of 6
[2025-04-03T22:07:31.365+0000] {taskinstance.py:2330} INFO - Executing <Task(PostgresOperator): create_tables_task> on 2025-03-26 13:33:39.761724+00:00
[2025-04-03T22:07:31.373+0000] {standard_task_runner.py:63} INFO - Started process 205 to run task
[2025-04-03T22:07:31.378+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'etl_pipeline', 'create_tables_task', 'manual__2025-03-26T13:33:39.761724+00:00', '--job-id', '138', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmp57o448td']
[2025-04-03T22:07:31.383+0000] {standard_task_runner.py:91} INFO - Job 138: Subtask create_tables_task
[2025-04-03T22:07:31.485+0000] {task_command.py:426} INFO - Running <TaskInstance: etl_pipeline.create_tables_task manual__2025-03-26T13:33:39.761724+00:00 [running]> on host 368b3be21c0d
[2025-04-03T22:07:31.664+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='lobobranco' AIRFLOW_CTX_DAG_ID='etl_pipeline' AIRFLOW_CTX_TASK_ID='create_tables_task' AIRFLOW_CTX_EXECUTION_DATE='2025-03-26T13:33:39.761724+00:00' AIRFLOW_CTX_TRY_NUMBER='5' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-03-26T13:33:39.761724+00:00'
[2025-04-03T22:07:31.665+0000] {taskinstance.py:430} INFO - ::endgroup::
[2025-04-03T22:07:31.761+0000] {sql.py:295} INFO - Executing: CREATE SCHEMA IF NOT EXISTS spotify;

CREATE TABLE IF NOT EXISTS spotify.artist (
    artist_id VARCHAR PRIMARY KEY,
    artist_name VARCHAR NOT NULL,
    external_url VARCHAR
);

CREATE TABLE IF NOT EXISTS spotify.album (
    album_id VARCHAR PRIMARY KEY,
    album_name VARCHAR NOT NULL,
    release_date DATE,
    total_tracks BIGINT,
    url VARCHAR
);

CREATE TABLE IF NOT EXISTS spotify.song (
    song_id VARCHAR PRIMARY KEY,
    song_name VARCHAR NOT NULL,
    duration_ms BIGINT,
    url VARCHAR,s
    popularity BIGINT,
    song_added DATE,
    album_id VARCHAR REFERENCES album(album_id),
    artist_id VARCHAR REFERENCES artist(artist_id)
);
[2025-04-03T22:07:31.773+0000] {base.py:84} INFO - Using connection ID 'postgres_default' for task execution.
[2025-04-03T22:07:31.784+0000] {base.py:84} INFO - Using connection ID 'postgres_default' for task execution.
[2025-04-03T22:07:31.784+0000] {sql.py:186} WARNING - This setter is for backward compatibility and should not be used.
Since the introduction of connection property, the providers listed below breaks due to assigning value to self.connection in their __init__ method.
* apache-***-providers-mysql<5.7.1
* apache-***-providers-elasticsearch<5.5.1
* apache-***-providers-postgres<5.13.0
[2025-04-03T22:07:31.791+0000] {sql.py:511} INFO - Running statement: CREATE SCHEMA IF NOT EXISTS spotify;

CREATE TABLE IF NOT EXISTS spotify.artist (
    artist_id VARCHAR PRIMARY KEY,
    artist_name VARCHAR NOT NULL,
    external_url VARCHAR
);

CREATE TABLE IF NOT EXISTS spotify.album (
    album_id VARCHAR PRIMARY KEY,
    album_name VARCHAR NOT NULL,
    release_date DATE,
    total_tracks BIGINT,
    url VARCHAR
);

CREATE TABLE IF NOT EXISTS spotify.song (
    song_id VARCHAR PRIMARY KEY,
    song_name VARCHAR NOT NULL,
    duration_ms BIGINT,
    url VARCHAR,s
    popularity BIGINT,
    song_added DATE,
    album_id VARCHAR REFERENCES album(album_id),
    artist_id VARCHAR REFERENCES artist(artist_id)
);, parameters: None
[2025-04-03T22:07:31.792+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2025-04-03T22:07:31.794+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/providers/common/sql/operators/sql.py", line 301, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/providers/common/sql/hooks/sql.py", line 467, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/providers/common/sql/hooks/sql.py", line 516, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "BIGINT"
LINE 22:     popularity BIGINT,
                        ^

[2025-04-03T22:07:31.829+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=etl_pipeline, task_id=create_tables_task, run_id=manual__2025-03-26T13:33:39.761724+00:00, execution_date=20250326T133339, start_date=20250403T220731, end_date=20250403T220731
[2025-04-03T22:07:31.930+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 138 for task create_tables_task (syntax error at or near "BIGINT"
LINE 22:     popularity BIGINT,
                        ^
; 205)
[2025-04-03T22:07:31.962+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2025-04-03T22:07:31.988+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2025-04-03T22:07:32.012+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
